[gd_scene load_steps=16 format=2]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://assets/gradients/zeronet_gradient_texture.tres" type="Texture" id=2]
[ext_resource path="res://ui/logos/zn_white.png" type="Texture" id=3]
[ext_resource path="res://ui/fonts/Refuge.otf" type="DynamicFontData" id=4]
[ext_resource path="res://ui/fonts/Cantarell-Regular.ttf" type="DynamicFontData" id=5]
[ext_resource path="res://ui/ui_theme.tres" type="Theme" id=6]
[ext_resource path="res://ui/buttons/grab/grab_idle.png" type="Texture" id=7]
[ext_resource path="res://ui/buttons/grab/grab_active.png" type="Texture" id=8]
[ext_resource path="res://ui/fonts/modernpics.otf" type="DynamicFontData" id=9]
[ext_resource path="res://audio/effects/click.wav" type="AudioStream" id=10]
[ext_resource path="res://audio/effects/knob_turn.wav" type="AudioStream" id=11]

[sub_resource type="DynamicFont" id=1]

size = 120
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=2]

size = 15
use_filter = true
font_data = ExtResource( 5 )

[sub_resource type="DynamicFont" id=3]

size = 50
use_filter = true
font_data = ExtResource( 9 )

[sub_resource type="Animation" id=4]

resource_name = "logo_idle"
length = 3.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("zn_logo:modulate")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5, 3 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0.0627451 ), Color( 1, 1, 1, 0.137255 ), Color( 1, 1, 1, 0.0627451 ) ]
}

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -34.0
margin_top = -671.0
margin_right = 619.0
margin_bottom = 220.0
rect_min_size = Vector2( 1529, 1065 )
rect_rotation = 14.3
texture = ExtResource( 2 )
expand = true

[node name="zn_logo" type="TextureRect" parent="."]
modulate = Color( 1, 1, 1, 0.0627451 )
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -382.811
margin_top = -407.874
margin_right = 129.189
margin_bottom = 104.126
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="SidePanelSpace" type="HBoxContainer" parent="."]
anchor_bottom = 1.0
margin_right = 427.0

[node name="spacer" type="Control" parent="SidePanelSpace"]
margin_right = 53.7
margin_bottom = 720.0
rect_min_size = Vector2( 53.7, 3.55 )

[node name="SidePanel" type="VBoxContainer" parent="SidePanelSpace"]
margin_left = 57.0
margin_right = 484.0
margin_bottom = 720.0

[node name="SpacerAtTheTop" type="Control" parent="SidePanelSpace/SidePanel"]
margin_right = 427.0
margin_bottom = 63.95
rect_min_size = Vector2( 0, 63.95 )

[node name="name" type="Label" parent="SidePanelSpace/SidePanel"]
margin_top = 67.0
margin_right = 427.0
margin_bottom = 162.0
custom_fonts/font = SubResource( 1 )
text = "zame"
uppercase = true

[node name="spacer" type="Control" parent="SidePanelSpace/SidePanel"]
margin_top = 166.0
margin_right = 427.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 2 )

[node name="HBoxContainer" type="HBoxContainer" parent="SidePanelSpace/SidePanel"]
modulate = Color( 1, 1, 1, 0.643137 )
margin_top = 172.0
margin_right = 427.0
margin_bottom = 205.0

[node name="Label" type="Label" parent="SidePanelSpace/SidePanel/HBoxContainer"]
margin_top = 6.0
margin_right = 398.0
margin_bottom = 27.0
custom_fonts/font = SubResource( 2 )
text = "A game showcasing the Zero Frame Godot Engine addon"

[node name="TextureRect2" type="TextureRect" parent="SidePanelSpace/SidePanel/HBoxContainer"]
modulate = Color( 1, 1, 1, 0.486275 )
margin_left = 402.0
margin_right = 427.52
margin_bottom = 33.0
rect_min_size = Vector2( 25.52, 33 )
texture = ExtResource( 3 )
expand = true
stretch_mode = 6

[node name="spacer3" type="Control" parent="SidePanelSpace/SidePanel"]
margin_top = 209.0
margin_right = 427.0
margin_bottom = 234.0
rect_min_size = Vector2( 0, 25 )

[node name="Play" type="Button" parent="SidePanelSpace/SidePanel"]
margin_top = 238.0
margin_right = 427.0
margin_bottom = 276.8
rect_min_size = Vector2( 0, 38.8 )
rect_pivot_offset = Vector2( 666.688, 134.079 )
theme = ExtResource( 6 )
text = "Play"
align = 0

[node name="MapList" type="ItemList" parent="SidePanelSpace/SidePanel"]
margin_top = 280.0
margin_right = 427.0
margin_bottom = 419.08
rect_min_size = Vector2( 0, 139.08 )
rect_pivot_offset = Vector2( 619.686, 73.718 )
theme = ExtResource( 6 )
items = [ "Default", null, false, "Map 2", null, false, "Map 3", null, false, "Map 4", null, false, "Map 5", null, false, "Map 6", null, false, "Map 7", null, false, "Map 8", null, false ]

[node name="grab_container" type="CenterContainer" parent="SidePanelSpace/SidePanel"]
margin_top = 423.0
margin_right = 427.0
margin_bottom = 443.0

[node name="GrabMe" type="TextureButton" parent="SidePanelSpace/SidePanel/grab_container"]
margin_left = 198.0
margin_right = 229.0
margin_bottom = 20.0
focus_mode = 0
mouse_default_cursor_shape = 6
action_mode = 0
enabled_focus_mode = 0
texture_normal = ExtResource( 7 )
texture_pressed = ExtResource( 8 )
texture_hover = ExtResource( 8 )
texture_disabled = ExtResource( 7 )
texture_focused = ExtResource( 8 )
stretch_mode = 2

[node name="spacer4" type="Control" parent="SidePanelSpace/SidePanel"]
margin_top = 447.0
margin_right = 427.0
margin_bottom = 461.7
rect_min_size = Vector2( 0, 14.7 )

[node name="Update" type="Button" parent="SidePanelSpace/SidePanel"]
margin_top = 465.0
margin_right = 427.0
margin_bottom = 503.8
rect_min_size = Vector2( 0, 38.8 )
rect_pivot_offset = Vector2( 666.688, 134.079 )
theme = ExtResource( 6 )
text = "Update"
align = 0

[node name="zn_button" type="Button" parent="."]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -111.419
margin_top = -41.7988
margin_right = -34.4189
margin_bottom = -21.7988
theme = ExtResource( 6 )
text = "zeronet.io"

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -190.15
margin_top = 23.5173
margin_right = -26.1499
margin_bottom = 74.5173

[node name="question" type="Button" parent="HBoxContainer"]
margin_right = 39.0
margin_bottom = 51.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "?"

[node name="Control2" type="Control" parent="HBoxContainer"]
margin_left = 43.0
margin_right = 60.94
margin_bottom = 51.0
rect_min_size = Vector2( 17.94, 0 )

[node name="config" type="Button" parent="HBoxContainer"]
margin_left = 64.0
margin_right = 106.0
margin_bottom = 51.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "("

[node name="Control" type="Control" parent="HBoxContainer"]
margin_left = 110.0
margin_right = 127.94
margin_bottom = 51.0
rect_min_size = Vector2( 17.94, 0 )

[node name="exit" type="Button" parent="HBoxContainer"]
margin_left = 131.0
margin_right = 164.0
margin_bottom = 51.0
theme = ExtResource( 6 )
custom_fonts/font = SubResource( 3 )
text = "X"

[node name="logo_animation" type="AnimationPlayer" parent="."]
autoplay = "logo_idle"
anims/logo_idle = SubResource( 4 )

[node name="audio" type="Node" parent="."]

[node name="click" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 10 )
volume_db = -8.723
bus = "Effects"

[node name="knob" type="AudioStreamPlayer" parent="audio"]
stream = ExtResource( 11 )
volume_db = -10.0
bus = "knob"

[connection signal="pressed" from="SidePanelSpace/SidePanel/Play" to="." method="play_click"]
[connection signal="pressed" from="SidePanelSpace/SidePanel/Play" to="." method="_on_Play_pressed"]
[connection signal="item_selected" from="SidePanelSpace/SidePanel/MapList" to="." method="_on_MapList_item_selected"]
[connection signal="pressed" from="SidePanelSpace/SidePanel/grab_container/GrabMe" to="." method="_on_GrabMe_pressed"]
[connection signal="pressed" from="SidePanelSpace/SidePanel/Update" to="." method="play_click"]
[connection signal="pressed" from="zn_button" to="." method="play_click"]
[connection signal="pressed" from="zn_button" to="." method="_on_zn_button_pressed"]
[connection signal="pressed" from="HBoxContainer/question" to="." method="play_click"]
[connection signal="pressed" from="HBoxContainer/config" to="." method="play_click"]
[connection signal="pressed" from="HBoxContainer/exit" to="." method="play_click"]
